[tool]
[tool.poetry]
name = "maestrowf"
version = "1.1.10"
description = "A tool to easily orchestrate general computational workflows both locally and on supercomputers."
license = "MIT License"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Unix", "Operating System :: MacOS :: MacOS X",
    "Intended Audience :: Developers", "Intended Audience :: Education",
    "Intended Audience :: Science/Research", "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
homepage = "https://github.com/llnl/maestrowf"
documentation = "https://maestrowf.readthedocs.io/"
authors = [
    "Francesco Di Natale <dinatale3@llnl.gov>", "Francesco Di Natale"
]
maintainers = [
    "Francesco Di Natale <dinatale3@llnl.gov>", "Francesco Di Natale",
    "Kevin C. Athey <athey1@llnl.gov>", "Kevin C. Athey",
    "Jessica Semler <semler1@llnl.gov>", "Jessica Semler",
    "Jeremy White <white242@llnl.gov>", "Jeremy White",
]
readme = "README.md"
packages = [
    { include = 'maestrowf'}
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
coloredlogs = "*"
dill = "*"
filelock = "*"
importlib_metadata = {version = "*", python = "<3.8"}
jsonschema = ">=3.2.0"
packaging = ">=22.0"
pyyaml = ">=4.2b1"
rich = "*"
six = "*"
tabulate = "*"

[tool.poetry.dev-dependencies]
coverage = "*"
mkdocs = "~1.3"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocs-mermaid2-plugin = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"       # Make sub groups here for docs, formatting, etc?
mkdocs-glightbox = "*"
pymdown-extensions = "*"
flake8 = "*"
pydocstyle = "*"
pylint = "*"
tox = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
tox-travis = "*"
tox-pyenv = "*"

[tool.poetry.plugins."console_scripts"]
"maestro" = "maestrowf.maestro:main"
"conductor" = "maestrowf.conductor:main"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LLNL/maestrowf/issues"
"Discussions" = "https://github.com/LLNL/maestrowf/discussions"

[tool.black]
line-length = 79
