[tool]
[tool.poetry]
name = "maestrowf"
version = "1.1.11dev2"
description = "A tool to easily orchestrate general computational workflows both locally and on supercomputers."
license = "MIT License"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Unix", "Operating System :: MacOS :: MacOS X",
    "Intended Audience :: Developers", "Intended Audience :: Education",
    "Intended Audience :: Science/Research", "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
homepage = "https://github.com/llnl/maestrowf"
documentation = "https://maestrowf.readthedocs.io/"
authors = [
    "Francesco Di Natale <dinatale3@llnl.gov>", "Francesco Di Natale"
]
maintainers = [
    "Francesco Di Natale <dinatale3@llnl.gov>", "Francesco Di Natale",
    "Kevin C. Athey <athey1@llnl.gov>", "Kevin C. Athey",
    "Jessica Semler <semler1@llnl.gov>", "Jessica Semler",
    "Jeremy White <white242@llnl.gov>", "Jeremy White",
]
readme = "README.md"
packages = [
    { include = 'maestrowf'}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
coloredlogs = "*"
dill = "*"
filelock = "*"
jsonschema = ">=3.2.0"
packaging = ">=22.0"
pyyaml = ">=4.2b1"
rich = "*"
six = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
coverage = "*"
flake8 = "*"
pydocstyle = "*"
pylint = "*"
tox = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
tox-travis = "*"
tox-pyenv = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = { version = "<2.0", python = "^3.9" }
mkdocs-material = { version = "*", python = "^3.9" }
mkdocs-material-extensions = { version = "*", python = "^3.9" }
mkdocstrings = { version = "*", python = "^3.9" }
mkdocstrings-python = { version = "*", python = "^3.9" }
mkdocs-gen-files = { version = "*", python = "^3.9" }
mkdocs-literate-nav = { version = "*", python = "^3.9" }
mkdocs-glightbox = { version = "*", python = "^3.9" }
pymdown-extensions = { version = "*", python = "^3.9" }
termynal = { version = "*", python = "^3.9" }

[tool.poetry.plugins."console_scripts"]
"maestro" = "maestrowf.maestro:main"
"conductor" = "maestrowf.conductor:main"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LLNL/maestrowf/issues"
"Discussions" = "https://github.com/LLNL/maestrowf/discussions"

[tool.black]
line-length = 79
